# my_bot_framework

./: .gitignore  IMPLEMENTATION.md  README.md  __init__.py  accessors.py  bot_application.py  dialog.py  editable.py  event.py  polling.py  pyproject.toml  telegram_utilities.py  utilities.py  validators.py
.cursor/agents/: code-style-enforcer.md  docs-updater.md  logging-enforcer.md  test-bots-maintainer.md  type-hints-enforcer.md
.cursor/commands/: create-commit-message.md  plan-overview.md
.cursor/rules/: comprehensive-logging.mdc  create-test-bot-for-new-features.mdc  enforce-coding-style.mdc  enforce-type-hints.mdc  run-code-style-enforcer.mdc  update-bots-documentation.mdc  update-documentation.mdc  update-test-bots-on-api-change.mdc  use-subagents.mdc
event_examples/: __init__.py  factories.py  threshold_event.py  time_event.py
test_bots/: BOTS.md  bad_html_bot.py  basic_bot.py  condition_bot.py  dialog_bot.py  dialog_handler_bot.py  document_bot.py  edit_event_dialog_bot.py  editable_bot.py  file_watcher_bot.py  network_error_bot.py  paginated_dialog_bot.py  reply_keyboard_bot.py  reply_keyboard_dialog_bot.py  send_retry_bot.py  test_document.txt  threshold_bot.py  utilities_bot.py
