[project]
name = "my-bot-framework"
version = "0.1.0"
description = "A modular, event-driven Telegram bot framework built on python-telegram-bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
]

[tool.mypy]
ignore_missing_imports = true
